language button design added

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -2,8 +2,10 @@
   "HEADER": {
     "ABOUT_ME": "Über mich",
     "SKILLS": "Fähigkeiten",
-    "PORTFOLIO": "Portfolio"
+    "PORTFOLIO": "Portfolio",
+    "CONTACT": "Kontakt"
   },
+
   "LANDING_PAGE": {
     "AS": "Ich bin",
     "NAME": "Özcan Mirzanli",
