--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -17,11 +17,11 @@
   "ABOUT_ME": {
     "TITLE": "About Me"
   },
-  "ABOUT_ME_TEXT": "Hi, I'm a passionate Frontend Developer based in Berlin. I thrive on turning complex ideas into intuitive and visually appealing user experiences. As Edsger Dijkstra wisely said, “The art of programming is the art of organizing complexity, mastering variety, and avoiding chaos.” This philosophy drives me to excel in my work.",
+  "ABOUT_ME_TEXT": "Hi, I'm a Frontend Developer based in Berlin. I enjoy taking complex ideas and turning them into user-friendly, visually appealing websites. Edsger Dijkstra said, “The art of programming is the art of organizing complexity, mastering variety, and avoiding chaos,” which really resonates with how I approach my work.",
   "ABOUT_ME_DETAILS": {
-    "LOCATION": "I am adaptable to various work environments and willing to relocate if needed. I prefer hybrid work but am also open to on-site or remote arrangements.",
-    "PROBLEM_SOLVER": "I'm a dedicated problem-solver who enjoys tackling challenges head-on. I relish the opportunity to dive into complex challenges, dissecting them into manageable parts, and crafting elegant solutions. Whether it’s troubleshooting bugs, optimizing performance, or refining user interactions, I’m committed to finding effective, innovative answers.",
-    "CREATIVITY": "My creativity shines through when I translate Figma designs into functional, user-friendly websites with innovative features. Whether it's crafting responsive layouts or implementing engaging interactive elements, I take pride in making each project a unique digital experience."
+    "LOCATION": " I'm flexible when it comes to work environments and open to relocating if needed. While I prefer hybrid work, I'm also fine with on-site or remote setups.",
+    "PROBLEM_SOLVER": "I love solving problems and tackling challenges. Whether it's troubleshooting bugs, improving performance, or fine-tuning user interactions, I focus on breaking down tough tasks into manageable pieces and finding practical solutions that work.",
+    "CREATIVITY": "I enjoy bringing Figma designs to life, turning them into functional websites with features that stand out. Whether it’s responsive layouts or interactive elements, I put a lot of effort into making each project a little different, and something people enjoy using."
   },
 
   "MY_SKILLS": {
